--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@realm/react": "^0.8.0",
+    "@tanstack/react-query": "^5.50.1",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-url-polyfill": "^2.0.0",
+    "realm": "^12.11.1",
+    "ts-md5": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,6 +26,7 @@
     "@react-native/eslint-config": "0.74.84",
     "@react-native/metro-config": "0.74.84",
     "@react-native/typescript-config": "0.74.84",
+    "@tsconfig/strictest": "^2.0.5",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
