--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@tsconfig/strictest/tsconfig.json",
   "compilerOptions": {
     "jsx": "react",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "strictNullChecks": true
   }
 }
