--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-native": "0.74.2",
     "react-native-url-polyfill": "^2.0.0",
     "realm": "^12.11.1",
-    "ts-md5": "^1.3.1"
+    "ts-md5": "^1.3.1",
+    "expo": "^51.0.0",
+    "expo-image": "~1.12.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
