--- a/package.json
+++ b/package.json
@@ -12,31 +12,35 @@
   "dependencies": {
     "@realm/react": "^0.8.0",
     "@tanstack/react-query": "^5.50.1",
-    "react": "18.2.0",
-    "react-native": "0.74.2",
+    "expo": ">=51.0.0-0 <52.0.0",
+    "expo-image": "~1.12.15",
+    "react": "^18.3.1",
+    "react-native": "^0.75.2",
     "react-native-url-polyfill": "^2.0.0",
     "realm": "^12.11.1",
-    "ts-md5": "^1.3.1",
-    "expo": "^51.0.0",
-    "expo-image": "~1.12.13"
+    "ts-md5": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.84",
-    "@react-native/eslint-config": "0.74.84",
-    "@react-native/metro-config": "0.74.84",
-    "@react-native/typescript-config": "0.74.84",
+    "@eslint/js": "^9.10.0",
+    "@react-native/babel-preset": "0.75.2",
+    "@react-native/eslint-config": "0.75.2",
+    "@react-native/metro-config": "0.75.2",
+    "@react-native/typescript-config": "0.75.2",
     "@tsconfig/strictest": "^2.0.5",
-    "@types/react": "^18.2.6",
+    "@types/react": "~18.2.79",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.36.1",
+    "globals": "^15.9.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "react-test-renderer": "18.3.1",
+    "typescript": "~5.3.3",
+    "typescript-eslint": "^8.5.0"
   },
   "engines": {
     "node": ">=18"
